--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,9 @@
 {
     "/js/admin.js": "/js/admin.js?id=b88aaee64c631bd06437",
     "/css/admin.css": "/css/admin.css?id=f5f0cb8624a0a28cf5b2",
-    "/css/public.css": "/css/public.css?id=709ac7a0c65ce52f28f6",
+    "/css/public.css": "/css/public.css?id=11d0dd601fdbc823341b",
     "/js/public.js": "/js/public.js?id=07cf954b504c2ac5f901",
+    "/components/animate.css/animate.min.css": "/components/animate.css/animate.min.css?id=bc1a6a99c43f5ccc97d2",
     "/components/ckeditor/ckeditor.js": "/components/ckeditor/ckeditor.js?id=1535d78d95f6b0493b4e",
     "/components/ckeditor/contents.css": "/components/ckeditor/contents.css?id=6884e4f2c966bfb06817",
     "/components/ckeditor/lang/fr.js": "/components/ckeditor/lang/fr.js?id=93256f7bd7f6a27aa803",
